fixe: fixed overflow from profile_name and add alt for logo.png

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -23,6 +23,9 @@
   line-height: 48px;
   margin: 0 18px 16px 0;
   text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .profile__description {
